RESOLVED FIXED27271
[V8] Fix isolated world wrappers for Nodes
https://bugs.webkit.org/show_bug.cgi?id=27271
Summary [V8] Fix isolated world wrappers for Nodes
Adam Barth
Reported 2009-07-14 12:26:45 PDT
We're getting the wrong wrappers for nodes because the DOMMap is stored on V8Proxy, subverting the branch in V8DOMMap.cpp. Patch forthcoming.
Attachments
patch (2.64 KB, patch)
2009-07-14 12:34 PDT, Adam Barth
dglazkov: review+
Adam Barth
Comment 1 2009-07-14 12:34:15 PDT
Created attachment 32728 [details] patch By the way, you can see the test suite I'm working from here: http://codereview.chromium.org/149193 Once I get these tests in reasonable shape, I can turn on the feature and land the tests.
Dimitri Glazkov (Google)
Comment 2 2009-07-14 12:37:10 PDT
Comment on attachment 32728 [details] patch Fix _and_ prettify. I like it.
Adam Barth
Comment 3 2009-07-14 12:44:41 PDT
Thanks. I'm working on a bunch of related changes in a git branch. I'll try to land them roughly together.
Adam Barth
Comment 4 2009-07-14 16:37:42 PDT
Sending WebCore/ChangeLog Sending WebCore/bindings/v8/V8DOMWrapper.cpp Sending WebCore/bindings/v8/V8Proxy.h Transmitting file data ... Committed revision 45882. http://trac.webkit.org/changeset/45882
Note You need to log in before you can comment on or make changes to this bug.