WebCore/bindings/v8/V8Proxy.h
@@ -158,7 +158,7 @@ namespace WebCore {
             GeneralError
         };
 
-        explicit V8Proxy(Frame* frame) : m_frame(frame), m_domNodeMap(getDOMNodeMap()), m_inlineCode(false), m_timerCallback(false), m_recursion(0) { }
+        explicit V8Proxy(Frame* frame) : m_frame(frame), m_inlineCode(false), m_timerCallback(false), m_recursion(0) { }
 
         ~V8Proxy();
 
@@ -360,7 +360,6 @@ namespace WebCore {
         bool installDOMWindow(v8::Handle<v8::Context> context, DOMWindow* window);
 
         void initContextIfNeeded();
-        DOMWrapperMap<Node>& domNodeMap() { return m_domNodeMap; }
         void updateDocumentWrapper(v8::Handle<v8::Value> wrapper);
 
     private:
@@ -418,8 +417,6 @@ namespace WebCore {
 
         v8::Persistent<v8::Object> m_global;
         v8::Persistent<v8::Value> m_document;
-
-        DOMWrapperMap<Node>& m_domNodeMap;
 
         // Utility context holding JavaScript functions used internally.
         static v8::Persistent<v8::Context> m_utilityContext;
